chore: generate swagger
